# ges

./: Cargo.toml  README.md
codegen/: Cargo.toml
codegen-derive/: Cargo.toml
codegen-derive/src/: inst.yml  lib.rs
codegen/src/: inst.txt  lib.rs  main.rs
core/: Cargo.toml
core/examples/: sample.rs
core/src/: cpu.rs  lib.rs  mmu.rs  ppu.rs  rom.rs  system.rs
