[package]
name = "ges-codegen-derive"
version = "0.1.0"
authors = ["Yushi OMOTE <yushiomote@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
ges-codegen = { path = "../codegen" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
quote = "1.0"
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }